[package]
name = "shinji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.11.7", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-axum = "0.34.0"
shuttle-runtime = "0.34.0"
shuttle-secrets = "0.34.0"
shuttle-serenity = "0.34.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
